# OpenCore

./: .gitignore  =1.0.0  CHANGELOG.md  LICENSE  README.md  SENTINEL_REPORT.md  build_executable.py  debug_routes.py  main.py  patchrunner_journal.md  pyproject.toml  reproduce_api_error.py  reproduce_env_access.py  requirements.txt  run_pytest.py  verify_hotfix.py  verify_voice_input.py
.Jules/: architect.md  conductor.md  palette.md  patch.md  patchrunner_journal.md  refine.md  sentinel.md  signal.md
.github/workflows/: nightly.yml  python-app.yml
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/verification/: verify_oauth_success.py
logs/: SENTINEL_REPORT.md  frontend_log.txt  patchrunner_journal.md  repro_pruning.py
opencore/: config.py
opencore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
opencore/audio/: service.py  transcriber.py
opencore/auth/: __init__.py  google.py  qwen.py
opencore/cli/: main.py  onboard.py  update.py
opencore/core/: agent.py  config_service.py  context.py  exceptions.py  logging.py  scheduler.py  swarm.py
opencore/interface/: api.py  auth_routes.py  heartbeat.py  middleware.py  rate_limit.py
opencore/llm/: __init__.py  anthropic.py  base.py  (+4 more)
tests/: test_agent.py  test_agent_management.py  test_agent_memory.py  test_agent_memory_leak.py  test_agent_providers.py  test_api_chat.py  test_api_config.py  test_api_error_format.py  test_api_malformed_input.py  test_api_validation.py  test_attachments.py  test_audio.py  test_audio_service.py  test_auth_qwen.py  test_cli_onboard.py  test_cli_update.py  test_command_injection.py  test_command_path_traversal.py  test_config_refine.py  test_deployment.py  test_env_permissions.py  test_error_handling.py  test_heartbeat.py  test_heartbeat_scheduler.py  test_integration.py  test_logging.py  test_provider_availability.py  test_read_file_limit.py  test_scheduler_execution.py  test_security_sensitive_files.py  test_security_tools.py  test_swarm.py  test_swarm_exceptions.py  test_tools.py
verification/: verify_chat_interface.py
(+80 files in other folders)
