[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "opencore"
version = "2.1.1"
description = "OpenCore AI Agent Swarm"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "openai",
    "google-genai>=1.0.0",
    "google-auth-oauthlib>=1.0.0",
    "boto3",
    "google-cloud-aiplatform",
    "anthropic",
    "mistralai",
    "groq",
    "playwright",
]

[project.scripts]
opencore = "opencore.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["opencore*"]
exclude = ["frontend*", "tests*"]
